--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "license": "MIT",
     "require": {
         "php" : ">=7.4.0",
-        "doctrine/dbal": "^2.5",
-        "laravel/helpers": "^1.2"
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
 		"phpunit/phpunit" : "^7.5.15|^8.4|^9.0",
